--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-kakao-login": "^2.1.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
     "styled-reset": "^4.5.1"
   },
