--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
-    "js-cookie": "^3.0.5",
     "chart.js": "^4.4.0",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
