--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.5",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
