--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.11.0",
     "react-kakao-login": "^2.1.1",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^9.1.3",
