--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           echo VITE_API_KEY=${{ secrets.VITE_API_KEY }} > .env
           echo VITE_KAKAO_CLIENT_ID=${{ secrets.VITE_KAKAO_CLIENT_ID }} >> .env 
           echo VITE_JAVASCRIPT_KEY=${{ secrets.VITE_JAVASCRIPT_KEY }} >> .env
-
+          echo VITE_REACT_APP_GOOGLE_ANALYTICS=${{ secrets.VITE_REACT_APP_GOOGLE_ANALYTICS }} >> .env
 
       # 또는 npm install, 프로젝트 종속성 설치 명령
       - name: Install dependencies
