--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.11.0",
     "react-kakao-login": "^2.1.1",
     "react-query": "^3.39.3",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-gtm-module": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
