--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.11.0",
     "react-kakao-login": "^2.1.1",
     "react-query": "^3.39.3",
